--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,5 +34,36 @@ pipeline
                 sh 'mvn package'
             }
         }
+
+        stage ('Build Docker Image')
+        {
+            steps
+            {
+                sh 'cp /var/lib/jenkins/workspace/$JOB_NAME/target/ABCtechnologies-1.0.war /var/lib/jenkins/workspace/$JOB_NAME/abc_tech.war'
+                sh 'docker build -t abc_tech:$BUILD_NUMBER .'
+                sh 'docker tag abc_tech:$BUILD_NUMBER adamumoh/abc_tech:$BUILD_NUMBER'
+            }
+        }
+
+        stage ('Push Docker Image')
+        {
+            steps
+            {
+                withDockerRegistry ([ credentialsId: "dockerhub_id", url: "" ])
+                {
+                    sh 'docker push adamumoh/abc_tech:$BUILD_NUMBER'
+                }
+            }
+        }
+
+        stage ('Deploy as container')
+        {
+            steps
+            {
+                sh 'docker run -itd -P adamumoh/abc_tech:$BUILD_NUMBER'
+            }
+        }
+                
     }
 }
+    
